crates/nash-report/tests/parse/snapshots/parse__exposing__error_missing_little_type_name.snap
---
source: crates/nash-report/tests/parse/exposing.rs
assertion_line: 10
description: "Code:\n\n(type)"
info: diagnostic
---
nash::syntax

  × Expected a lowercase type name after `type`.
   ╭─[src/Main.nash:1:6]
 1 │ (type)
   ·      ─
   ╰────
  help: Write `type name` or `type name(..)`.
