crates/nash-report/tests/parse/snapshots/parse__exposing__error_unclosed_little_type.snap
---
source: crates/nash-report/tests/parse/exposing.rs
assertion_line: 15
description: "Code:\n\n(type option(..)"
info: diagnostic
---
nash::syntax::unclosed_delimiter

  × Expected `)` to close `(`.
   ╭─[src/Main.nash:1:17]
 1 │ (type option(..)
   · ┬               ┬
   · │               ╰── expected `)`
   · ╰── opened here
   ╰────
  help: Add `)` here.
