crates/nash-report/tests/parse/snapshots/parse__exposing__error_uppercase_after_type.snap
---
source: crates/nash-report/tests/parse/exposing.rs
assertion_line: 5
description: "Code:\n\n(type Foo)"
info: diagnostic
---
nash::syntax

  × Expected a lowercase type name after `type`.
   ╭─[src/Main.nash:1:7]
 1 │ (type Foo)
   ·       ─
   ╰────
  help: Write `type name` or `type name(..)`.
